--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 import React from 'react';
 import ReactDOM from 'react-dom';
 import { AppContainer } from 'react-hot-loader';
-import App from './src/App';
+import App from './App';
 
 const render = () => {
   ReactDOM.render(<AppContainer><App /></AppContainer>, document.getElementById('App'));
