--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link href="assets/material-icons.css" rel="stylesheet">
     <title>Reacthome</title>
   </head>
   <body>
