--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="assets/material-icons.css" rel="stylesheet">
     <link href="assets/ubuntu.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
-    <title>Reacthome</title>
+    <title>Reacthome Studio</title>
   </head>
   <body>
     <div id="app"></div>
