--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="assets/material-icons.css" rel="stylesheet">
     <link href="assets/ubuntu.css" rel="stylesheet">
+    <link href="assets/xterm.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
     <title>Reacthome Studio</title>
   </head>
