--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="assets/ubuntu.css" rel="stylesheet">
     <link href="assets/xterm.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
-    <title>Reacthome Studio</title>
+    <title>Hommyn Studio</title>
   </head>
   <body>
     <div id="app"></div>
